--- a/src/app/components/admin/list-seller-admin/list-seller-admin.component.html
+++ b/src/app/components/admin/list-seller-admin/list-seller-admin.component.html
@@ -41,7 +41,7 @@
       <!-- /filtros boton -->
 
       <!-- Table  -->
-      <h2>Lista de Vendedores </h2>
+      <h2>Lista de Dueños </h2>
       <app-general-table [columns]="columns" [rows]="rows" [isDesktop]="isDesktop" (editButton)="edit($event)"
         (deletedButton)="presentAlertConfirm($event)" (detailsButton)="detailSeller($event)"></app-general-table>
       <!-- /Table -->
