--- a/src/app/components/admin/list-prop-admin/list-prop-admin.component.html
+++ b/src/app/components/admin/list-prop-admin/list-prop-admin.component.html
@@ -59,7 +59,7 @@
 
 </ion-content>
 <!-- fab placed to the bottom end -->
-<ion-fab vertical="bottom" horizontal="start" slot="fixed">
+<ion-fab *ngIf="user.type !== 'seller'" vertical="bottom" horizontal="start" slot="fixed">
   <ion-fab-button (click)="newBuyer()" *ngIf="isLoading" color="secondary">
     <ion-icon name="add"></ion-icon>
   </ion-fab-button>
