--- a/src/app/components/buyer/new-buyer/new-buyer.component.scss
+++ b/src/app/components/buyer/new-buyer/new-buyer.component.scss
@@ -49,6 +49,26 @@
 
 }
 
+.alert {
+    position: relative;
+    padding: 0.75rem 1.25rem;
+    margin-bottom: 1rem;
+    border: 1px solid transparent;
+    border-radius: 0.25rem;
+}
+
+.alert-danger {
+    color: #721c24;
+    background-color: #f8d7da;
+    border-color: #f5c6cb;
+}
+
+.alert-success {
+    color: #155724;
+    background-color: #d4edda;
+    border-color: #c3e6cb;
+}
+
 @media (max-width: 900px) {
     .flex-container>* {
         width: 100%;
