--- a/src/app/components/admin/detail-prop-admin/detail-prop-admin.component.html
+++ b/src/app/components/admin/detail-prop-admin/detail-prop-admin.component.html
@@ -188,7 +188,7 @@
              'background-azul':  item.status === 'azul' }">
                 {{item.status
                 === 'rojo' ? 'Cierre' : item.status
-                === 'verde' ? 'Intreres': item.status
+                === 'verde' ? 'Interés': item.status
                 === 'amarillo' ? 'Seguimiento': item.status
                 === 'azul' ? 'Post Venta' : ''}}</span>
             </li>
